--- a/src/public/PublicWrapper.sass
+++ b/src/public/PublicWrapper.sass
@@ -1,6 +1,34 @@
 body
-  background-image: url('../assets/images/bg.jpg')
-  background-repeat: no-repeat
-  background-position: center center
+  background: url('../assets/images/bg.jpg') no-repeat center center
   background-size: cover
   height: 100vh
+
+  .form--wrapper
+    display: flex
+    height: inherit
+    justify-content: center
+    align-items: center
+
+    .form--container
+      position: relative
+      display: flex
+      height: 600px
+      width: 420px
+      background-color: #fff
+      box-shadow: 0 3px 3px rgba(0, 0, 0, .18), 0 2px 3px rgba(0, 0, 0, .24)
+
+.pageSlider-enter
+  transform: translate3d(100%, 0, 0)
+
+.pageSlider-enter.pageSlider-enter-active
+  transform: translate3d(0, 0, 0)
+  transition: all 600ms
+
+.page
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: 1000
+
