--- a/src/public/PublicWrapper.sass
+++ b/src/public/PublicWrapper.sass
@@ -17,18 +17,17 @@ body
       background-color: #fff
       box-shadow: 0 3px 3px rgba(0, 0, 0, .18), 0 2px 3px rgba(0, 0, 0, .24)
 
-.pageSlider-enter
-  transform: translate3d(100%, 0, 0)
+.slide-in
+  transform: translate(100%)
 
-.pageSlider-enter.pageSlider-enter-active
-  transform: translate3d(0, 0, 0)
-  transition: all 600ms
+  &.slide-in-active
+    transform: translate(0%)
+    transition: transform 1000ms ease-in-out
 
-.page
-  position: absolute
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  z-index: 1000
+.slide-out
+  transform: translate(0%)
+
+  &.slide-out-active
+    transform: translate(-100%)
+    transition: transform 1000ms ease-in-out
 
