--- a/src/App.sass
+++ b/src/App.sass
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i')
 @import "~perfect-styles"
+
+$font-family: 'Roboto', sans-serif
+
+h1, h2, h3, h4, h5, h5, p, input, textarea, select, button, a
+  font-family: $font-family
 
 #root
   height: inherit
