Amount section almost completed

--- a/src/public/components/amount/CoverFees.sass
+++ b/src/public/components/amount/CoverFees.sass
@@ -4,6 +4,8 @@
   .cover-fees-text
     text-align: left
     flex: 5
+    font-size: 14px
+    font-weight: 400
 
   .cover-fees-checkbox
     flex: 1
