--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i')
-@import "~perfect-styles"
+@import "assets/sass/perfect-styles/styles"
 
 $font-family: 'Roboto', sans-serif
 
