--- a/src/public/Amount.sass
+++ b/src/public/Amount.sass
@@ -4,3 +4,7 @@
 #other-amount
   width: 50%
   border-radius: 3px
+  position: relative
+  background: url('../assets/icons/dollar.svg') no-repeat scroll 0 6px
+  padding-left: 32px
+
