Finished amount section

--- a/src/public/components/amount/Amount.sass
+++ b/src/public/components/amount/Amount.sass
@@ -5,6 +5,6 @@
   width: 50%
   border-radius: 3px
   position: relative
-  background: url('../assets/icons/dollar.svg') no-repeat scroll 0 6px
+  background: url('../../../assets/icons/dollar.svg') no-repeat scroll 0 6px
   padding-left: 32px
 
