--- a/src/public/PublicWrapper.sass
+++ b/src/public/PublicWrapper.sass
@@ -17,6 +17,10 @@ body
       background-color: #fff
       box-shadow: 0 3px 3px rgba(0, 0, 0, .18), 0 2px 3px rgba(0, 0, 0, .24)
 
+      @media screen and (max-width: 600px)
+        height: 100%
+        width: 100%
+
       p
         font-size: 13px
         padding: 0 18px
