Working on sliding navigation

--- a/src/assets/sass/perfect-styles/components/_utility.sass
+++ b/src/assets/sass/perfect-styles/components/_utility.sass
@@ -2,9 +2,6 @@
 // Utility
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-.hidden
-	display: none
-
 $sizes: (6, 12, 18, 24, 36)
 
 // Clear a float with .clearfix
@@ -54,3 +51,15 @@ $sizes: (6, 12, 18, 24, 36)
 
 	.p-r-#{$size}
 		padding-right: #{$size}px
+
+.hidden
+	display: none
+
+.text-center
+  text-align: center
+
+.text-right
+  text-align: right
+
+.text-left
+  text-align: left
