--- a/src/public/components/common/NavButtons.sass
+++ b/src/public/components/common/NavButtons.sass
@@ -23,3 +23,10 @@
 
     &:hover
       background-color: #444
+
+    &.disabled
+      opacity: .6
+
+      &:hover
+        cursor: not-allowed
+        background-color: #333
