--- a/src/public/components/amount/CoverFees.sass
+++ b/src/public/components/amount/CoverFees.sass
@@ -6,7 +6,9 @@
     flex: 5
     font-size: 14px
     font-weight: 400
+    padding-right: 24px
 
   .cover-fees-checkbox
     flex: 1
     text-align: right
+    padding-right: 6px
