--- a/src/public/components/common/NavButtons.sass
+++ b/src/public/components/common/NavButtons.sass
@@ -30,3 +30,9 @@
       &:hover
         cursor: not-allowed
         background-color: #333
+
+    &.btn-prev
+      background-color: #666
+
+      &:hover
+        background-color: #777
