--- a/src/public/components/amount/Amount.sass
+++ b/src/public/components/amount/Amount.sass
@@ -2,9 +2,12 @@
   text-align: center
 
 #other-amount
-  width: 50%
+  width: 66%
   border-radius: 3px
   position: relative
   background: url('../../../assets/icons/dollar.svg') no-repeat scroll 0 6px
   padding-left: 32px
+
+.btn-recurring
+  border: none
 
