--- a/src/public/components/common/NavButtons.sass
+++ b/src/public/components/common/NavButtons.sass
@@ -26,10 +26,12 @@
 
     &.disabled
       opacity: .6
+      pointer-events: none
 
       &:hover
         cursor: not-allowed
         background-color: #333
+        pointer-events: none
 
     &.btn-prev
       background-color: #666
