--- a/src/public/components/personal-info/PersonalInfo.sass
+++ b/src/public/components/personal-info/PersonalInfo.sass
@@ -34,4 +34,10 @@
       &.right
         margin-left: 6px
 
+.input-error
+  border: 1px solid #8F0900 !important
+
+.validation-error
+  font-size: 12px
+  color: #8F0900
 
