--- a/src/public/components/common/NavButtons.sass
+++ b/src/public/components/common/NavButtons.sass
@@ -26,7 +26,7 @@
 
     &.disabled
       opacity: .6
-      pointer-events: none
+      pointer-events: none !important
 
       &:hover
         cursor: not-allowed
