--- a/src/public/components/personal-info/PersonalInfo.sass
+++ b/src/public/components/personal-info/PersonalInfo.sass
@@ -37,7 +37,9 @@
 .input-error
   border: 1px solid #8F0900 !important
 
-.validation-error
-  font-size: 12px
-  color: #8F0900
+#validation-errors
+  p
+    font-size: 12px
+    color: #8F0900
+    margin: 0
 
