Completed the page Validation for the personal info page

--- a/src/assets/sass/perfect-styles/components/_form.sass
+++ b/src/assets/sass/perfect-styles/components/_form.sass
@@ -57,3 +57,9 @@ input[type='radio']
 	display: inline-block
 	font-weight: normal
 	margin-left: .5rem
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button
+	/* display: none; <- Crashes Chrome on hover */
+	-webkit-appearance: none
+	margin: 0 /* <-- Apparently some margin are still there even though it's hidden */
