--- a/src/public/components/personal-info/PersonalInfo.sass
+++ b/src/public/components/personal-info/PersonalInfo.sass
@@ -9,9 +9,14 @@
     display: flex
     flex-wrap: wrap
 
-    .input-half
+    .input-wrapper
       display: flex
       width: calc(50% - 6px)
+      flex-direction: column
+
+      .input-error
+        border: 1px solid #f44336 !important
+        margin-bottom: 2px
 
       &.left
         margin-right: 6px
@@ -19,23 +24,21 @@
       &.right
         margin-left: 6px
 
-    .input-one-third
-      display: flex
-      width: calc(30% - 6px)
+      &.one-third
+        display: flex
+        width: calc(30% - 6px)
 
-      &.left
-        margin-right: 6px
+        &.left
+          margin-right: 6px
 
-    .input-two-third
-      display: flex
-      width: calc(70% - 6px)
+      &.two-third
+        display: flex
+        width: calc(70% - 6px)
+
+        &.right
+          margin-left: 6px
 
 
-      &.right
-        margin-left: 6px
-
-.input-error
-  border: 1px solid #8F0900 !important
 
 #validation-errors
   p
@@ -43,3 +46,24 @@
     color: #8F0900
     margin: 0
 
+.error-wrapper
+  margin-top: -10px
+  margin-bottom: 4px
+  display: flex
+  width: 100%
+
+.error
+  font-size: 11px
+  color: #f44336
+  width: 100%
+  padding-left: 2px
+  margin-bottom: 6px
+
+  &.right
+    padding-left: 8px
+
+  &.error-one-third
+    width: calc(30% - 6px)
+
+  &.error-two-third
+    width: calc(70% - 6px)
