--- a/src/assets/sass/perfect-styles/components/_form.sass
+++ b/src/assets/sass/perfect-styles/components/_form.sass
@@ -33,7 +33,7 @@ select
 	-webkit-appearance: none
 
 	&:focus
-		background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 29 14" width="29"><path fill="#9b4dca" d="M9.37727 3.625l5.08154 6.93523L19.54036 3.625"/></svg>')
+		background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 29 14" width="29"><path fill="#8F0900" d="M9.37727 3.625l5.08154 6.93523L19.54036 3.625"/></svg>')
 
 textarea
 	min-height: 6.5rem
