WIP: Still working on the review section 🔥🚀

--- a/src/assets/sass/perfect-styles/components/_button.sass
+++ b/src/assets/sass/perfect-styles/components/_button.sass
@@ -2,7 +2,7 @@
 // Button
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-.button,
+.btn,
 button,
 input[type='button'],
 input[type='reset'],
@@ -40,7 +40,7 @@ input[type='submit']
 			background-color: $color-primary
 			border-color: $color-primary
 
-	&.button-outline
+	&.btn-outline
 		background-color: transparent
 		color: $color-primary
 
@@ -57,7 +57,7 @@ input[type='submit']
 				border-color: inherit
 				color: $color-primary
 
-	&.button-clear
+	&.btn-clear
 		background-color: transparent
 		border-color: transparent
 		color: $color-primary
