--- a/src/assets/sass/perfect-styles/components/_color.sass
+++ b/src/assets/sass/perfect-styles/components/_color.sass
@@ -4,3 +4,4 @@ $color-secondary: #333 !default
 $color-tertiary: #eee800 !default
 $color-quaternary: #d1d1d1 !default
 $color-quinary: #e1e1e1 !default
+$white: $color-initial
