--- a/src/public/components/review/Review.sass
+++ b/src/public/components/review/Review.sass
@@ -5,3 +5,16 @@
     display: block
     margin: 12px auto
     height: 72px
+
+  .btn-submit
+    display: flex
+    justify-content: center
+    align-content: center
+
+    &:hover
+      background: #777777
+
+    .btn-loading
+      display: flex
+      height: 26px
+      margin: auto
