--- a/src/assets/sass/perfect-styles/styles.css
+++ b/src/assets/sass/perfect-styles/styles.css
@@ -59,7 +59,7 @@ blockquote {
   blockquote *:last-child {
     margin-bottom: 0; }
 
-.button,
+.btn,
 button,
 input[type='button'],
 input[type='reset'],
@@ -80,7 +80,7 @@ input[type='submit'] {
   text-decoration: none;
   text-transform: uppercase;
   white-space: nowrap; }
-  .button:focus, .button:hover,
+  .btn:focus, .btn:hover,
   button:focus,
   button:hover,
   input[type='button']:focus,
@@ -93,14 +93,14 @@ input[type='submit'] {
     border-color: #333;
     color: #fff;
     outline: 0; }
-  .button[disabled],
+  .btn[disabled],
   button[disabled],
   input[type='button'][disabled],
   input[type='reset'][disabled],
   input[type='submit'][disabled] {
     cursor: default;
     opacity: .5; }
-    .button[disabled]:focus, .button[disabled]:hover,
+    .btn[disabled]:focus, .btn[disabled]:hover,
     button[disabled]:focus,
     button[disabled]:hover,
     input[type='button'][disabled]:focus,
@@ -111,65 +111,65 @@ input[type='submit'] {
     input[type='submit'][disabled]:hover {
       background-color: #8F0900;
       border-color: #8F0900; }
-  .button.button-outline,
-  button.button-outline,
-  input[type='button'].button-outline,
-  input[type='reset'].button-outline,
-  input[type='submit'].button-outline {
+  .btn.btn-outline,
+  button.btn-outline,
+  input[type='button'].btn-outline,
+  input[type='reset'].btn-outline,
+  input[type='submit'].btn-outline {
     background-color: transparent;
     color: #8F0900; }
-    .button.button-outline:focus, .button.button-outline:hover,
-    button.button-outline:focus,
-    button.button-outline:hover,
-    input[type='button'].button-outline:focus,
-    input[type='button'].button-outline:hover,
-    input[type='reset'].button-outline:focus,
-    input[type='reset'].button-outline:hover,
-    input[type='submit'].button-outline:focus,
-    input[type='submit'].button-outline:hover {
+    .btn.btn-outline:focus, .btn.btn-outline:hover,
+    button.btn-outline:focus,
+    button.btn-outline:hover,
+    input[type='button'].btn-outline:focus,
+    input[type='button'].btn-outline:hover,
+    input[type='reset'].btn-outline:focus,
+    input[type='reset'].btn-outline:hover,
+    input[type='submit'].btn-outline:focus,
+    input[type='submit'].btn-outline:hover {
       background-color: transparent;
       border-color: #333;
       color: #333; }
-    .button.button-outline[disabled]:focus, .button.button-outline[disabled]:hover,
-    button.button-outline[disabled]:focus,
-    button.button-outline[disabled]:hover,
-    input[type='button'].button-outline[disabled]:focus,
-    input[type='button'].button-outline[disabled]:hover,
-    input[type='reset'].button-outline[disabled]:focus,
-    input[type='reset'].button-outline[disabled]:hover,
-    input[type='submit'].button-outline[disabled]:focus,
-    input[type='submit'].button-outline[disabled]:hover {
+    .btn.btn-outline[disabled]:focus, .btn.btn-outline[disabled]:hover,
+    button.btn-outline[disabled]:focus,
+    button.btn-outline[disabled]:hover,
+    input[type='button'].btn-outline[disabled]:focus,
+    input[type='button'].btn-outline[disabled]:hover,
+    input[type='reset'].btn-outline[disabled]:focus,
+    input[type='reset'].btn-outline[disabled]:hover,
+    input[type='submit'].btn-outline[disabled]:focus,
+    input[type='submit'].btn-outline[disabled]:hover {
       border-color: inherit;
       color: #8F0900; }
-  .button.button-clear,
-  button.button-clear,
-  input[type='button'].button-clear,
-  input[type='reset'].button-clear,
-  input[type='submit'].button-clear {
+  .btn.btn-clear,
+  button.btn-clear,
+  input[type='button'].btn-clear,
+  input[type='reset'].btn-clear,
+  input[type='submit'].btn-clear {
     background-color: transparent;
     border-color: transparent;
     color: #8F0900; }
-    .button.button-clear:focus, .button.button-clear:hover,
-    button.button-clear:focus,
-    button.button-clear:hover,
-    input[type='button'].button-clear:focus,
-    input[type='button'].button-clear:hover,
-    input[type='reset'].button-clear:focus,
-    input[type='reset'].button-clear:hover,
-    input[type='submit'].button-clear:focus,
-    input[type='submit'].button-clear:hover {
+    .btn.btn-clear:focus, .btn.btn-clear:hover,
+    button.btn-clear:focus,
+    button.btn-clear:hover,
+    input[type='button'].btn-clear:focus,
+    input[type='button'].btn-clear:hover,
+    input[type='reset'].btn-clear:focus,
+    input[type='reset'].btn-clear:hover,
+    input[type='submit'].btn-clear:focus,
+    input[type='submit'].btn-clear:hover {
       background-color: transparent;
       border-color: transparent;
       color: #333; }
-    .button.button-clear[disabled]:focus, .button.button-clear[disabled]:hover,
-    button.button-clear[disabled]:focus,
-    button.button-clear[disabled]:hover,
-    input[type='button'].button-clear[disabled]:focus,
-    input[type='button'].button-clear[disabled]:hover,
-    input[type='reset'].button-clear[disabled]:focus,
-    input[type='reset'].button-clear[disabled]:hover,
-    input[type='submit'].button-clear[disabled]:focus,
-    input[type='submit'].button-clear[disabled]:hover {
+    .btn.btn-clear[disabled]:focus, .btn.btn-clear[disabled]:hover,
+    button.btn-clear[disabled]:focus,
+    button.btn-clear[disabled]:hover,
+    input[type='button'].btn-clear[disabled]:focus,
+    input[type='button'].btn-clear[disabled]:hover,
+    input[type='reset'].btn-clear[disabled]:focus,
+    input[type='reset'].btn-clear[disabled]:hover,
+    input[type='submit'].btn-clear[disabled]:focus,
+    input[type='submit'].btn-clear[disabled]:hover {
       color: #8F0900; }
 
 code {
@@ -395,7 +395,7 @@ ol {
 ul {
   list-style: circle inside; }
 
-.button,
+.btn,
 button,
 dd,
 dt,
