--- a/src/public/components/review/Review.sass
+++ b/src/public/components/review/Review.sass
@@ -18,3 +18,10 @@
       display: flex
       height: 26px
       margin: auto
+
+  .error-message
+    background: #f44336
+    padding: 12px
+    font-size: 13px
+    color: white
+    border-radius: 2px
