Removed transition from first page

--- a/src/public/components/PublicWrapper.sass
+++ b/src/public/components/PublicWrapper.sass
@@ -47,6 +47,9 @@ body
     &.next-enter
       transform: translate(100%)
 
+      &.amount
+        transform: translate(0)
+
       &.next-enter-active
         transition: transform .7s
         transform: translate(0)
@@ -71,4 +74,3 @@ body
       &.previous-leave-active
         transition: transform .7s
         transform: translate(100%)
-
