--- a/src/admin/components/layout/Navigation.sass
+++ b/src/admin/components/layout/Navigation.sass
@@ -1,23 +1,37 @@
 nav
-  width: 240px
-  background: #f2f2f2
-  position: fixed
-  top: 0
-  left: 0
-  height: 100%
-  z-index: 9999
+  display: flex !important
+  margin-bottom: 24px !important
+  border-bottom: 1px solid #eee !important
+  height: 48px !important
 
   .logo
-    text-align: center
+    display: flex
+    flex: 1
     padding: 6px
+    margin-right: auto
+
+    img
+      max-height: 32px
 
   .nav-items
+    justify-content: flex-end
+    align-content: center
+    align-items: center
+    align-self: center
     display: flex
-    flex-direction: column
+    flex: 5
+    height: 100%
 
     a
       display: flex
-      padding: 8px
+      justify-content: center
+      align-items: center
+      padding-left: 12px
+      padding-right: 12px
+      color: #333
+      height: 100%
 
       &.active
-        background: #eee
+        color: #8F0900
+        background: #f2f2f2
+
