WIP: Working on the admin section

--- a/src/admin/components/auth/Login.sass
+++ b/src/admin/components/auth/Login.sass
@@ -9,3 +9,13 @@
     padding: 18px
     background: #fff
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
+
+    .error-message
+      background-color: #f44336
+      color: #ffffff
+      padding: 12px
+      font-size: 1.3rem
+      text-align: left
+      margin-bottom: 12px
+      p
+        margin: 0
