--- a/src/admin/components/layout/Navigation.sass
+++ b/src/admin/components/layout/Navigation.sass
@@ -1,6 +1,5 @@
 nav
   display: flex !important
-  margin-bottom: 24px !important
   border-bottom: 1px solid #eee !important
   height: 48px !important
 
@@ -12,6 +11,7 @@ nav
 
     img
       max-height: 32px
+      margin-left: 12px
 
   .nav-items
     justify-content: flex-end
@@ -33,5 +33,5 @@ nav
 
       &.active
         color: #8F0900
-        background: #f2f2f2
+        border-bottom: 3px solid #8F0900
 
