--- a/src/admin/components/tables/DonationsTable.sass
+++ b/src/admin/components/tables/DonationsTable.sass
@@ -1,5 +1,8 @@
 .rt-table
 
+  .rt-thead
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, .1) !important
+
   .rt-tbody
     font-size: 13px
 
@@ -8,6 +11,6 @@
 
 .btn-view-donor
   font-size: .8rem
-  height: 2.5rem
-  line-height: 2.5rem
+  height: 1.5rem
+  line-height: 1.5rem
   padding: 0 1.0rem
