--- a/src/assets/sass/perfect-styles/components/_button.sass
+++ b/src/assets/sass/perfect-styles/components/_button.sass
@@ -1,4 +1,3 @@
-
 // Button
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
@@ -7,73 +6,80 @@ button,
 input[type='button'],
 input[type='reset'],
 input[type='submit']
-	background-color: $color-primary
-	border: .1rem solid $color-primary
-	border-radius: .4rem
-	color: $color-initial
-	cursor: pointer
-	display: inline-block
-	font-size: 1.1rem
-	font-weight: 700
-	height: 3.8rem
-	letter-spacing: .1rem
-	line-height: 3.8rem
-	padding: 0 3.0rem
-	text-align: center
-	text-decoration: none
-	text-transform: uppercase
-	white-space: nowrap
+  background-color: $color-primary
+  border: .1rem solid $color-primary
+  border-radius: .4rem
+  color: $color-initial
+  cursor: pointer
+  display: inline-block
+  font-size: 1.1rem
+  font-weight: 700
+  height: 3.8rem
+  letter-spacing: .1rem
+  line-height: 3.8rem
+  padding: 0 3.0rem
+  text-align: center
+  text-decoration: none
+  text-transform: uppercase
+  white-space: nowrap
 
-	&:focus,
-	&:hover
-		background-color: $color-secondary
-		border-color: $color-secondary
-		color: $color-initial
-		outline: 0
+  &.btn-sm
+    border-radius: .2rem
+    font-size: .8rem
+    padding: 0 0.9rem
+    line-height: 2.6rem
+    height: 2.7rem
 
-	&[disabled]
-		cursor: default
-		opacity: .5
+  &:focus,
+  &:hover
+    background-color: $color-secondary
+    border-color: $color-secondary
+    color: $color-initial
+    outline: 0
 
-		&:focus,
-		&:hover
-			background-color: $color-primary
-			border-color: $color-primary
+  &[disabled]
+    cursor: default
+    opacity: .5
 
-	&.btn-outline
-		background-color: transparent
-		color: $color-primary
+    &:focus,
+    &:hover
+      background-color: $color-primary
+      border-color: $color-primary
 
-		&:focus,
-		&:hover
-			background-color: transparent
-			border-color: $color-secondary
-			color: $color-secondary
+  &.btn-outline
+    background-color: transparent
+    color: $color-primary
 
-		&[disabled]
+    &:focus,
+    &:hover
+      background-color: transparent
+      border-color: $color-secondary
+      color: $color-secondary
 
-			&:focus,
-			&:hover
-				border-color: inherit
-				color: $color-primary
+    &[disabled]
 
-	&.btn-clear
-		background-color: transparent
-		border-color: transparent
-		color: $color-primary
+      &:focus,
+      &:hover
+        border-color: inherit
+        color: $color-primary
 
-		&:focus,
-		&:hover
-			background-color: transparent
-			border-color: transparent
-			color: $color-secondary
+  &.btn-clear
+    background-color: transparent
+    border-color: transparent
+    color: $color-primary
 
-		&[disabled]
+    &:focus,
+    &:hover
+      background-color: transparent
+      border-color: transparent
+      color: $color-secondary
 
-			&:focus,
-			&:hover
-				color: $color-primary
+    &[disabled]
 
-	&.btn-block
-		display: block
-		width: 100%
+      &:focus,
+      &:hover
+        color: $color-primary
+
+  &.btn-block
+    display: block
+    width: 100%
