Most of the v1 pages are complete

--- a/src/admin/components/tables/RecurringDonationsTable.sass
+++ b/src/admin/components/tables/RecurringDonationsTable.sass
@@ -5,3 +5,8 @@
 
 .react-datepicker-ignore-onclickoutside
   height: 2.8rem !important
+
+.recurring-datepicker
+  font-weight: 300 !important
+  font-size: 1.2rem !important
+  border-radius: .2rem
