Ready for production

--- a/src/assets/sass/perfect-styles/components/_button.sass
+++ b/src/assets/sass/perfect-styles/components/_button.sass
@@ -83,3 +83,10 @@ input[type='submit']
   &.btn-block
     display: block
     width: 100%
+
+  &.btn-success
+    background-color: #43A047
+    border: none
+
+    &.hover
+      opacity: .8
