--- a/src/public/components/common/FullWidthButton.sass
+++ b/src/public/components/common/FullWidthButton.sass
@@ -14,11 +14,15 @@
   border: none
   color: #fff
 
-  &:hover
-    background-color: #444
-    color: #fff
+  &.btn-success
+    background: #43A047
+
+    &:hover
+      color: #fff
+      opacity: .8
 
   &.disabled
+    background-color: #333
     opacity: .6
 
     &:hover
