--- a/src/public/components/common/NavButtons.sass
+++ b/src/public/components/common/NavButtons.sass
@@ -21,11 +21,14 @@
     border: none
     color: #fff
 
-    &:hover
-      background-color: #444
+    &.btn-next
+      background: #43A047
+
+      &:hover
+        opacity: .8
 
     &.disabled
-      opacity: .6
+      background: #333
       pointer-events: none !important
 
       &:hover
