--- a/src/admin/components/AdminWrapper.sass
+++ b/src/admin/components/AdminWrapper.sass
@@ -1,15 +1,27 @@
-&.fade-enter
-  opacity: 0
-  transition: opacity .7s
+.transition-wrapper-admin
+  position: relative
+  width: 100%
 
-  &.fade-enter-active
-    transition: opacity .7s
+  .section-wrapper
+    padding: 24px
+
+  .section-header
+    background: #fafafa
+    padding: 24px
+
+  .transition-item
     opacity: 1
+    
+    &.fade-enter
+      transition: all ease .7s
+      opacity: 0
 
-  &.fade-leave
-    opacity: 1
-    transition: opacity .7s
+      &.fade-enter-active
+        opacity: 1
+        transition: all ease .7s
 
-    &.fade-leave-active
-      opacity: 1
-      transition: opacity .7s
+    &.fade-leave
+      opacity: 0
+
+      &.fade-leave-active
+        opacity: 0
