Added disable to submit button while submitting

--- a/src/assets/sass/perfect-styles/components/_button.sass
+++ b/src/assets/sass/perfect-styles/components/_button.sass
@@ -90,3 +90,9 @@ input[type='submit']
 
     &.hover
       opacity: .8
+
+    &[disabled]
+
+      &:focus,
+      &:hover
+        background-color: #43A047
